--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ h2{
 <div class="container cf">
 <nav>
 <ul class="side-nav">
-<li><a href = "page1.html" class="nav_home_img"><div class="rtr">🏠</div></a></li></ul></nav>
+<li><a href = "https://mouradmore.github.io/Learn-English/" class="nav_home_img"><div class="rtr"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><g style="--darkreader-inline-fill:rgba(81, 82, 83, 0.8);" data-darkreader-inline-fill=""><rect x="1" y="1" width="6" height="6" rx="1" ry="1"></rect><rect x="9" y="1" width="6" height="6" rx="1" ry="1"></rect><rect x="1" y="9" width="6" height="6" rx="1" ry="1"></rect><rect x="9" y="9" width="6" height="6" rx="1" ry="1"></rect></g></svg></div></a></li></ul></nav>
   <div class="main_content cf">
     
     <div class="slides cf">
@@ -690,35 +690,70 @@ h2{
 <div id="slide-indicator" >
 <div id="rightside-display">
 <div class="active"><img src="cow.jpg"/>
-<p>🔊</p></div>
-<div><img src="dog.jpg"/><p>🔊</p></div>
-<div><img src="cat.jpg"/><p>🔊</p></div>
-<div><img src="elephant.jpg"/><p>🔊</p></div>
-<div><img src="zebra.jpg"/><p>🔊</p></div>
-<div><img src="bison.jpg"/><p>🔊</p></div>
-<div><img src="panda.jpg"/><p>🔊</p></div>
-<div><img src="penguin.jpg"/><p>🔊</p></div>
-<div><img src="hippopotamus.jpg"/><p>🔊</p></div>
-<div><img src="rhinoceros.jpg"/><p>🔊</p></div>
-<div><img src="horse.jpg"/><p>🔊</p></div>
-<div><img src="giraffe.jpg"/><p>🔊</p></div>
-<div><img src="lion.jpg"/><p>🔊</p></div>
-<div><img src="tiger.jpg"/><p>🔊</p></div>
-<div><img src="bear.jpg"/><p>🔊</p></div>
-<div><img src="sheep.jpg"/><p>🔊</p></div>
-<div><img src="pig.jpg"/><p>🔊</p></div>
-<div><img src="deer.jpg"/><p>🔊</p></div>
-<div><img src="monkey.jpg"/><p>🔊</p></div>
-<div><img src="squirrel.jpg"/><p>🔊</p></div>
-<div><img src="hen.jpg"/><p>🔊</p></div>
-<div><img src="rabbit.jpg"/><p>🔊</p></div>
-<div><img src="bird.jpg"/><p>🔊</p></div>
-<div><img src="crow.jpg"/><p>🔊</p></div>
-<div><img src="dove.jpg"/><p>🔊</p></div>
-<div><img src="fish1.jpg"/><p>🔊</p></div>
-<div><img src="crocodile.jpg"/><p>🔊</p></div>
-<div><img src="spider.jpg"/><p>🔊</p></div>
-<div><img src="frog.jpg"/><p>🔊</p></div>
+<p><span class="play" onclick="speakfirst()">
+<svg id="playback" width="30" height="30" viewBox="0 0 20 20">
+<path style="fill:black" d="M9.344,2.593c-0.253-0.104-0.547-0.045-0.743,0.15L4.486,6.887H1.313c-0.377,0-0.681,0.305-0.681,0.681v4.916c0,0.377,0.304,0.681,0.681,0.681h3.154l4.137,4.142c0.13,0.132,0.304,0.201,0.482,0.201c0.088,0,0.176-0.017,0.261-0.052c0.254-0.105,0.42-0.354,0.42-0.629L9.765,3.224C9.765,2.947,9.599,2.699,9.344,2.593z M5.233,12.003c-0.128-0.127-0.302-0.2-0.483-0.2H1.994V8.249h2.774c0.182,0,0.355-0.072,0.483-0.201l3.151-3.173l0.001,10.305L5.233,12.003z">
+    </path>
+<path style="fill:black" d="M16.434,10.007c0-2.553-1.518-4.853-3.869-5.858C12.223,4,11.821,4.16,11.672,4.506c-0.148,0.346,0.013,0.746,0.359,0.894c1.846,0.793,3.041,2.6,3.041,4.608c0,1.997-1.188,3.799-3.025,4.592c-0.346,0.149-0.505,0.551-0.356,0.895c0.112,0.258,0.362,0.411,0.625,0.411c0.091,0,0.181-0.017,0.269-0.056C14.922,14.843,16.434,12.548,16.434,10.007z"></path>
+<path style="fill:black" d="M13.418,10.005c0-1.349-0.802-2.559-2.042-3.086c-0.346-0.144-0.745,0.015-0.894,0.362c-0.146,0.346,0.016,0.745,0.362,0.893c0.737,0.312,1.212,1.031,1.212,1.832c0,0.792-0.471,1.509-1.2,1.825c-0.345,0.149-0.504,0.551-0.352,0.895c0.112,0.257,0.362,0.41,0.625,0.41c0.091,0,0.181-0.017,0.27-0.057C12.625,12.545,13.418,11.339,13.418,10.005z">
+    </path>
+<path style="fill:black" d="M13.724,1.453c-0.345-0.15-0.746,0.012-0.895,0.358c-0.148,0.346,0.013,0.745,0.358,0.894c2.928,1.256,4.819,4.122,4.819,7.303c0,3.171-1.886,6.031-4.802,7.289c-0.346,0.149-0.505,0.55-0.356,0.894c0.112,0.258,0.362,0.412,0.626,0.412c0.09,0,0.181-0.019,0.269-0.056c3.419-1.474,5.626-4.826,5.626-8.54C19.368,6.282,17.152,2.923,13.724,1.453z"></path>
+  </svg></span></p></div>
+<div><img src="dog.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="cat.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="elephant.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="zebra.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="bison.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="panda.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="penguin.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="hippopotamus.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="rhinoceros.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="horse.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="giraffe.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="lion.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="tiger.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="bear.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="sheep.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="pig.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="deer.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="monkey.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="squirrel.jpg"/><p></p></div>
+<div><img src="hen.jpg"/><p></p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></div>
+<div><img src="rabbit.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="bird.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="crow.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="dove.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="fish1.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="crocodile.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="spider.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
+<div><img src="frog.jpg"/><p><svg width="30" height="30">
+<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#playback"></use></svg></p></div>
 
 </div></div>
 
